--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch-a-sketch</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./script.js" defer></script>
-</head>
-<body>
-    <div id="grid-container"></div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Etch-a-sketch</title>
+        <link rel="stylesheet" href="./style.css">
+        <script src="./script.js" defer></script>
+    </head>
+    <body>
+        <label for="grid-size">Size (Width x Height): </label>
+        <input type="number" id="grid-size-value" name="grid-size" min="4" max="100" value="16" />
+        <button class="grid-create-button" type="button" onclick="drawGrid();">Draw Grid</button>
+        <div id="grid-container"></div>
+    </body>
 </html>
